--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
   "bugs": {
     "url": "https://github.com/vetalin/element-position-open/issues"
   },
-  "homepage": "https://github.com/vetalin/element-position-open#readme"
+  "homepage": "https://github.com/vetalin/element-position-open#readme",
+  "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.9.0",
+    "babylon": "^6.18.0",
+    "eslint": "^6.2.2",
+    "jest": "^24.9.0",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-transform-stub": "^2.0.0",
+    "jest-watch-typeahead": "^0.4.0",
+    "typescript": "^3.7.3"
+  }
 }
