--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "webpack",
+    "build-ts": "tsc"
   },
   "repository": {
     "type": "git",
@@ -17,17 +19,29 @@
   "bugs": {
     "url": "https://github.com/vetalin/element-position-open/issues"
   },
+  "main": "dist/index.js",
   "homepage": "https://github.com/vetalin/element-position-open#readme",
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babylon": "^6.18.0",
     "eslint": "^6.2.2",
+    "faker": "^4.1.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "^0.4.0",
-    "typescript": "^3.7.3"
+    "node-fetch": "^2.6.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "webpack": "^4.41.2"
   }
 }
