--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,49 +3,22 @@
     "target": "es5",
     "module": "esnext",
     "strict": true,
-    "jsx": "preserve",
-    "importHelpers": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "baseUrl": ".",
-    "noImplicitThis": true,
-    //    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/lib/@types"
-    ],
-    "types": [
-      "webpack-env",
-      "jest",
-      "webpack",
-      "webpack-env"
-    ],
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
+    "declaration": true,
+    "declarationDir": "dist",
+    "outDir": "dist",
     "lib": [
       "esnext",
       "dom",
-      "dom.iterable",
-      "scripthost"
+      "dom.iterable"
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
-  ],
-  "files": [
-    "src/shims-vue.d.ts"
   ]
 }
